# rtmp_demo

./: CMakeLists.txt  Makefile  README.txt  build.bat  getopt.h  rtmpdump.c  rtmpgw.c  rtmppublish.c  rtmpsrv.c  rtmpsuck.c  thread.c  thread.h
cmake/: dep_openssl.cmake  dep_zlib.cmake
librtmp/: CMakeLists.txt  Makefile  amf.c  amf.h  dh.h  getopt.c  getopt.h  handshake.h  hashswf.c  log.c  log.h  parseurl.c  rtmp.c  rtmp.h
